--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_install:
   - yes | sdkmanager "platforms;android-27"
 
 script: 
-    - ./gradlew --stacktrace lint test :GenesisAndroid:assembleDebug :GenesisAndroid:assembleRelease  
+    - ./gradlew clean
+    - ./gradlew assembleDebug
+    - ./gradlew assembleDebugAndroidTest 
 
 after_success: ./script/deploy_snapshot.sh
