--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,9 @@ android:
     - 'google-gdk-license-.+'
 
 before_install: 
-  - yes | sdkmanager "platforms;android-27"
+  - yes | sdkmanager "platforms;android-28"
 
 script: 
-    - ./gradlew clean
-    - ./gradlew assembleDebug
-    - ./gradlew assembleDebugAndroidTest 
+    - ./gradlew --stacktrace lint test :GenesisAndroid:assembleDebug :GenesisAndroid:assembleRelease  
 
 after_success: ./script/deploy_snapshot.sh
